RESOLVED FIXED13166
REGRESSION (2005-10-16 - 2005-10-19): Ampersands showing up in the last column of the Gmail contacts table
https://bugs.webkit.org/show_bug.cgi?id=13166
Summary REGRESSION (2005-10-16 - 2005-10-19): Ampersands showing up in the last colum...
mitz
Reported 2007-03-22 16:58:40 PDT
Summary: Ampersand (&) characters appear in the right hand side of some of the rows in the contacts list in Gmail. Steps to reproduce: Note: this is not 100% reproducible. 1) Launch Safari w/TOT WebKit. 2) Log in to your Gmail account. 3) Choose Contacts > All Contacts. Expected: No ampersands on the right hand side of the contacts table. Actual: Every 12th row or so there is an ampersand in the otherwise-empty rightmost column of the contacts table. Regression: This is a regression from shipping WebKit. Notes: CC:ing Alexey because regularly-distributed ampersands smell a little like encoding errors on network packet boundaries.
Attachments
HTML Source of page in question (4.35 KB, text/plain)
2007-03-22 18:18 PDT, Donald C. Kirker
no flags
Reduction (162 bytes, text/html)
2007-03-29 06:30 PDT, mitz
no flags
Patch (4.59 KB, patch)
2007-03-29 08:52 PDT, mitz
darin: review+
Donald C. Kirker
Comment 1 2007-03-22 18:18:32 PDT
Created attachment 13773 [details] HTML Source of page in question When viewing with Web Inspector on the latest nightly r20387: The bug happens around line 63. Each item in the script element about line 63 (the upper script element) gets its own table row (with td elements for the check box, name and email address). The same is said for each item in the new script element on line 63 (lower script element). When the bug comes into play is actual source of the script element (including the script tags) gets placed in an odd td element on the same table row as the last item from the upper script element. If you click to go to another part of gmail and then return to the "All Contacts" list this is not reproducible until you log back out of gmail and log back in.
mitz
Comment 2 2007-03-23 17:20:20 PDT
Works in WebKit-CVS-2005-10-16 09-27-50 GMT.dmg, broken in WebKit-CVS-2005-10-19 02-27-00 GMT.dmg. The only tokenizer patch in that range is <http://trac.webkit.org/projects/webkit/changeset/10867>.
mitz
Comment 3 2007-03-29 06:30:53 PDT
Created attachment 13860 [details] Reduction
mitz
Comment 4 2007-03-29 08:52:49 PDT
Darin Adler
Comment 5 2007-03-29 09:33:20 PDT
Comment on attachment 13863 [details] Patch r=me
Sam Weinig
Comment 6 2007-03-29 19:52:50 PDT
Landed in r20607.
Note You need to log in before you can comment on or make changes to this bug.