LayoutTests:

Reviewed by Darin.

        - test for http://bugs.webkit.org/show_bug.cgi?id=13166
          REGRESSION (2005-10-16 - 2005-10-19): Ampersands showing up in the last column of the Gmail contacts table

        * fast/tokenizer/write-partial-entity-expected.txt: Added.
        * fast/tokenizer/write-partial-entity.html: Added.

WebCore:

        Reviewed by Darin.

        - fix http://bugs.webkit.org/show_bug.cgi?id=13166
          REGRESSION (2005-10-16 - 2005-10-19): Ampersands showing up in the last column of the Gmail contacts table

        Test: fast/tokenizer/write-partial-entity.html

        * html/HTMLTokenizer.cpp:
        (WebCore::HTMLTokenizer::parseTag): Reordered to avoid resetting the buffer position
        after script execution which can write to the buffer.



git-svn-id: svn://svn.chromium.org/blink/trunk@20607 bbb929c8-8fbe-4397-9dbb-9b2b20218538