third_party/WebKit/WebCore/html/HTMLTokenizer.cpp
@@ -1162,6 +1162,7 @@ HTMLTokenizer::State HTMLTokenizer::parseTag(SegmentedString &src, State state)
             }
 
             RefPtr<Node> n = processToken();
+            m_cBufferPos = cBufferPos;
             if (n) {
                 if ((tagName == preTag || tagName == listingTag) && !inViewSourceMode()) {
                     if (beginTag)
@@ -1226,7 +1227,6 @@ HTMLTokenizer::State HTMLTokenizer::parseTag(SegmentedString &src, State state)
             }
             if (tagName == plaintextTag)
                 state.setInPlainText(beginTag);
-            m_cBufferPos = cBufferPos;
             return state; // Finished parsing tag!
         }
         } // end switch
